# video-editor

./: .gitignore  README.md  gui.py  main.py  pyproject.toml
