[project]
name = "video-editer"
version = "0.1.0"
description = ""
authors = [
    {name = "matt-lenovo-laptop",email = "matmigg0804@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (==2.2.2)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "moviepy (>=2.2.1,<3.0.0)",
    "imageio[ffmpeg] (>=2.37.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
